--- a/environment.yml
+++ b/environment.yml
@@ -2,7 +2,7 @@
 # conda env create --file environment.yml
 # update:
 # conda env update --file environment.yml --prune
-name: sbi
+name: pyknos
 
 channels:
   - conda-forge
