--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -43,5 +43,8 @@ jobs:
         run: |
             python -m pip install --upgrade pip
             python setup.py install
+      - name: "Install testing dependencies"
+        run: |
+            pip install torchtestcase
       - name: "Run tests"
         run: python -m unittest discover
