--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -47,4 +47,4 @@ jobs:
         run: |
             pip install torchtestcase
       - name: "Run tests"
-        run: python -m unittest discover
+        run: python -m unittest discover -s . -p "*_test.py"
