--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -23,15 +23,18 @@ on:
 
 jobs:
   test:
-    name: Python ${{ matrix.python-version }} - ${{ matrix.os }} - ${{ github.event_name }} 
+    name: Python ${{ matrix.python-version }} - ${{ matrix.os }} - PyTorch ${{ matrix.pytorch-version }} - ${{ github.event_name }} 
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: ['3.7']
+        python-version:
+          - '3.7'
         os:
           - ubuntu-latest
-          - windows-latest
-          - macOS-latest
+        pytorch-version:
+          - '1.8'
+          - '1.7'
+          - '1.6'
     
     steps:
       - uses: actions/checkout@v1.0.0
@@ -39,12 +42,20 @@ jobs:
         uses: actions/setup-python@v1
         with:
           python-version: ${{ matrix.python-version }}
+      - name: "Install pip"
+        run: python -m pip install --upgrade pip
+      - name: "Install pytorch stable"
+        if: ${{ matrix.pytorch-version }} == "1.8"
+        run: pip install torch==1.8.0+cpu torchvision==0.9.0+cpu torchaudio==0.8.0 -f https://download.pytorch.org/whl/torch_stable.html
+      - name: "Install pytorch 1.7"
+        if: ${{ matrix.pytorch-version }} == "1.7"
+        run: pip install torch==1.7.1+cpu torchvision==0.8.2+cpu torchaudio==0.7.2 -f https://download.pytorch.org/whl/torch_stable.html
+      - name: "Install pytorch 1.6"
+        if: ${{ matrix.pytorch-version }} == "1.6"
+        run: pip install torch==1.6.0+cpu torchvision==0.7.0+cpu -f https://download.pytorch.org/whl/torch_stable.html
       - name: "Install package"
-        run: |
-            python -m pip install --upgrade pip
-            python setup.py install
+        run: python setup.py install
       - name: "Install testing dependencies"
-        run: |
-            pip install torchtestcase
+        run: pip install torchtestcase
       - name: "Run tests"
         run: python -m unittest discover -s . -p "*_test.py"
