--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -23,7 +23,7 @@ on:
 
 jobs:
   test:
-    name: Python ${{ matrix.python-version }} - ${{ matrix.os }} - PyTorch ${{ matrix.pytorch-version }} - ${{ github.event_name }} 
+    name: Py${{ matrix.python-version }}/${{ matrix.os }}/Torch${{ matrix.pytorch-version }}/${{ github.event_name }} 
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -43,7 +43,9 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: "Install pip"
-        run: python -m pip install --upgrade pip
+        run: |
+            python -m pip install --upgrade pip wheel
+            pip install wheel
       - name: "Install pytorch stable"
         if: ${{ matrix.pytorch-version }} == "1.8"
         run: pip install torch==1.8.0+cpu torchvision==0.9.0+cpu torchaudio==0.8.0 -f https://download.pytorch.org/whl/torch_stable.html
